# dhi

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CTO_GUIDE.md  Cargo.toml  DHI_BRANDING.md  DHI_LAUNCH.md  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  dhi.patterns.toml.example  dhi.py  dhi.toml.example  dhi_agentic.py  dhi_kernel.c  dhi_simple.py  rustfmt.toml
.github/workflows/: ci.yml  release.yml
bpf/: README.md  dhi_ssl.bpf.c  vmlinux.h
dhi-rs/: README.md
dhi-rs/src/: lib.rs  main.rs
docs/: AGENTIC_FEATURES.md  BRANDING.md  COMPARISON.md  COPILOT_OBSERVABILITY_DESIGN_AND_ATTEMPTS.md  CTO_GUIDE.md  DEVELOPERS.md  DEVELOPER_GUIDE.md  DHI_BRANDING.md  DHI_README.md  FRAMEWORK_ONBOARDING_GUIDE.md  INTEGRATION.md  NON_LINUX_PROXY.md  OPERATIONS.md  SECURITY.md  TESTING.md  USER_GUIDE.md  index.html  site.css
examples/: sample-alert-slack.json  sample-alert-webhook.json  sample-report-agents.json  sample-report-daily-testing-alerts.html  sample-report-daily-testing-alerts.json  sample-report-daily.html  sample-report-daily.json
ops/logrotate/: dhi
ops/sysctl/: 99-dhi-ebpf.conf
ops/systemd/: dhi-health-check.service  dhi-health-check.timer  dhi-report.service  dhi-report.timer  dhi.service
scripts/: copilot-cli-e2e.sh  copilot-test-vectors.json  dhi-generate-report.sh  dhi-health-check.sh  install-linux-release.sh  release-verify.sh  report-test-vectors.json  reporting-e2e.sh  security-e2e.sh  security-test-vectors.json  uninstall-linux.sh
src/: lib.rs  main.rs  proxy.rs  proxy_test.rs  reporting.rs  server.rs
(+47 files in other folders)
